--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,49 @@
 @import url(blocks/copyright.css);
 @import url(blocks/links.css);
 @import url(blocks/socials.css);
+
+body {
+    background-color:#F4F6F9;
+}
+
+.main_background_img {
+	display: flex;
+	background: #F4F6F9;
+	align-items: center;
+}
+
+.content .btn-signup {
+    padding: 15px 30px;
+    font-size: 18px;
+    background: #0056ff;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.image-container {
+    width: 787.74px;
+    height: 701.76px;
+    display: flex;
+    	  background-image: url("../images/heder.png");
+	  background-repeat: no-repeat;
+	  background-size: cover;
+	  background-position: center;
+	  margin-top: -100px;
+
+}
+
+.image-container img {
+    width: 100%;
+    height: auto;
+}
+
+.img_as {
+	position: abcolute;
+	padding: 50px;
+	margin-top: -200px;
+}
