--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -2,25 +2,39 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
+    padding: 42px 80px;
     background: #F4F6F9;
+    font-size: 10px;
+    overflow: hidden;
 }
+
+.left {
+    display: flex;
+}
+
 .header__logo {
     font-size: 24px;
     font-weight: bold;
     color: black;
     background: #F4F6F9;
     z-index: 0;
+    max-width: 113px;
+}
+
+.header__nav{
+    display: flex;
+    z-index: 1;
+    align-items: center;
 }
 
 .header-list {
     display :flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
+    margin: 0 0 0 79px;
+    padding: 0;
 }
 
 .header-list__item {
-    margin: 0 15px;
+    margin: 0 16.5px;
     color: #333;
     font-size: 16px;
     font-weight: 500;
@@ -34,6 +48,7 @@ header {
 .header__buttons {
     display: flex;
     gap: 10px;
+    float: right;
     z-index: 2;
 }
 
