--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
 body {
     background-color:#FFF;
     width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .main_background_img {
