--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -4,7 +4,6 @@ header {
     align-items: center;
     padding: 42px 80px;
     background: #F4F6F9;
-    font-size: 10px;
     overflow: hidden;
 }
 
@@ -36,7 +35,7 @@ header {
 .header-list__item {
     margin: 0 16.5px;
     color: #333;
-    font-size: 16px;
+    font-size: 10pt;
     font-weight: 500;
     list-style-type:none;
 }
@@ -54,7 +53,7 @@ header {
 
 .header__button-log, .header__button-sign {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 10pt;
     border-radius: 25px;
     text-decoration: none;
     color: white;
