--- a/styles/blocks/main-block.css
+++ b/styles/blocks/main-block.css
@@ -23,24 +23,8 @@
     border-radius:  0% 0% 160% 160%/0% 0% 60% 60%;
 }
 
-.container__slogan {
+.container__slogan-img {
     width: 481.16px;
     height: 122.64px;
     margin: 0 20px 24px 0;
-}
-
-.container__text {
-    line-height: 171%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18pt;
-}
-
-.container__button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 25px;
-    border: none;
-    text-decoration: none;
-    color: white;
-    background-color: #0056ff;
 }
