--- a/styles/blocks/section-sounds.css
+++ b/styles/blocks/section-sounds.css
@@ -1,3 +1,12 @@
 .section-sounds{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 138px;
+}
+
+.section-sounds__img{
+    width: 760px;
+    height: 499px;
 }
