--- a/styles/blocks/section-plugins.css
+++ b/styles/blocks/section-plugins.css
@@ -2,11 +2,19 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin: 0px 139px 109px 139px;
+    padding: 450px 0 109px 0;
+    background: linear-gradient(to bottom, rgba(244, 246, 249, 1) 57%, rgba(244, 246, 249, 0) 100%);
+    width: 100%;
+    max-width: 100vw;
+    border-radius:  150% 150% 0% 0%/15% 15% 0% 0%;
 }
 
 .section-plugins__img {
-    margin-right: 230px;
+    margin-right: 16%;
     width: 35%;
     object-fit: contain;
+}
+
+.section-plugins > .container {
+    width: 28%
 }
