--- a/styles/blocks/section-reviews.css
+++ b/styles/blocks/section-reviews.css
@@ -5,8 +5,12 @@
     overflow: visible;
     max-width: 100vw;
     width: 100%;
-    height: 150vh;
+    height: 130vh;
     box-sizing: border-box;
+}
+
+.section-reviews > .container {
+    height: 350px;
 }
 
 .section-reviews__img {
