--- a/styles/blocks/section-sounds.css
+++ b/styles/blocks/section-sounds.css
@@ -4,9 +4,12 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 138px;
+    position: relative;
 }
 
 .section-sounds__img{
     width: 760px;
     height: 499px;
+    position: absolute;
+    bottom: -480px;
 }
