--- a/styles/blocks/section-featured.css
+++ b/styles/blocks/section-featured.css
@@ -2,13 +2,16 @@
     display: flex;
     width: auto;
     text-align: center;
-    margin: 82px 124px 127px;
+    margin: 90px 8.6%;
     flex-direction: column;
     align-items: center;
 }
 
 .section-featured__caption {
     margin-bottom: 30px;
+    font-size: 12pt;
+    color: #606060;
+    font-weight: 500;
 }
 
 .section-featured__list {
