--- a/styles/blocks/section-sounds.css
+++ b/styles/blocks/section-sounds.css
@@ -3,13 +3,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 138px;
+    /*margin-bottom: 138px;*/
     position: relative;
 }
 
-.section-sounds__img{
-    width: 760px;
-    height: 499px;
+.swiper{
+    width: 53%;
+    height: 65vh;
     position: absolute;
-    bottom: -480px;
+    bottom: -80px;
+    object-fit: cover;
 }
