--- a/styles/blocks/container.css
+++ b/styles/blocks/container.css
@@ -33,3 +33,9 @@
     background-color: #0056ff;
     margin: 34px 0 50px 0;
 }
+
+.container__button:hover{
+    background-color: rgb(2, 66, 192);
+    transition: 0.2s;
+    cursor: pointer;
+}
