--- a/styles/blocks/main-block.css
+++ b/styles/blocks/main-block.css
@@ -1,13 +1,18 @@
 
 .image-container {
     position: relative;
-    max-width: 787.74px;
+    /*max-width: 787.74px;*/
+    width: 50%;
     height: auto;
     display: flex;
     background-image: url("img/main-block/side.png");
     top: 0;
     object-fit: contain;
     z-index: 0;
+}
+
+.main-block__img{
+    width: 100%;
 }
 
 .main-block {
@@ -17,7 +22,7 @@
 	align-items: center;
 	justify-content: space-between;
     width: auto;
-    height: 520px;
+    height: 550px;
     border-radius:  0% 0% 160% 160%/0% 0% 60% 60%;
 }
 
