js. задание 2.2 (нач)

--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -56,13 +56,15 @@ header {
     font-size: 10pt;
     border-radius: 25px;
     text-decoration: none;
-    color: white;
+    color: #fff;
+    border: none;
 }
 
 .header__button-sign {
     background: transparent;
     color: #fff;
     background-color: rgba(256, 256, 256, 0.26);
+    border: none;
 }
 
 .header__button-sign:hover {
