--- a/styles/blocks/section-featured.css
+++ b/styles/blocks/section-featured.css
@@ -1,4 +1,4 @@
-.section-featured {
+/*.section-featured {
     display: flex;
     width: auto;
     text-align: center;
@@ -21,4 +21,35 @@
 
 .section-featured__img {
     padding: 0 35px;
+}*/
+
+.section-featured {
+    text-align: center;
+    height: 150px; /* Высота секции */
+    margin: 150px 0 80px 0;
+}
+
+.section-featured__marquee {
+    display: flex;
+    width: 100%;
+    white-space: nowrap; /* Запрет переносов строк */
+    overflow: hidden;
+}
+
+.section-featured__list {
+    display: flex;
+}
+
+.section-featured__img {
+    display: inline-block;
+    /*max-width: 100px; /* Ограничение ширины изображений */
+    height: auto;
+    margin: 0 35px; /* Отступ между изображениями */
+}
+
+.section-featured__caption {
+    margin-bottom: 30px;
+    font-size: 14pt;
+    color: #606060;
+    font-weight: 500;
 }
