--- a/styles/blocks/main-block.css
+++ b/styles/blocks/main-block.css
@@ -4,14 +4,19 @@
     width: 60%;
     height: auto;
     display: flex;
-    background-image: url("../../img/main-block/side.png");
     top: -20%;
     object-fit: contain;
     z-index: 0;
 }
 
+.main-block__container {
+    flex: 1; /* Позволяет контейнеру занимать оставшееся пространство */
+    padding-right: 20px; /* Отступ справа для текста */
+}
+
 .main-block__img{
     width: 100%;
+    height: auto;
 }
 
 .main-block {
@@ -29,4 +34,67 @@
     width: 481.16px;
     height: 122.64px;
     margin: 0 20px 24px 0;
+}
+
+.container__text {
+    margin: 20px 0; /* Отступы для текста */
+}
+
+.container__button {
+    padding: 10px 20px; /* Отступы для кнопки */
+}
+
+@media only screen and (max-width: 1024px) {
+    .main-block__container {
+        height: auto;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 0;
+        text-align: center;
+    }
+    .main-block {
+        padding-left: 40px; /* Уменьшаем отступы */
+        height: auto; /* Автоматическая высота */
+        flex-direction: column; /* Вертикальное расположение */
+        align-items: center; /* Центрируем содержимое */
+    }
+    
+    .image-container {
+        display: none;
+    }
+
+    .container__slogan-img {
+        width: 100%; /* Увеличиваем ширину изображения слогана */
+        height: auto; /* Автоматическая высота */
+        margin: 0 auto;
+    }
+}
+
+/* Адаптивные стили для мобильных устройств */
+@media only screen and (max-width: 768px) {
+    .main-block {
+        padding-left: 20px; /* Уменьшаем отступы */
+        height: auto; /* Автоматическая высота */
+        flex-direction: column; /* Вертикальное расположение */
+        align-items: center; /* Центрируем содержимое */
+    }
+
+    .image-container {
+        display: none;
+    }
+
+    .container__slogan-img {
+        width: 80%; /* Уменьшаем ширину изображения слогана */
+        height: auto; /* Автоматическая высота */
+    }
+
+    .container__text {
+        text-align: center; /* Центрируем текст */
+        font-size: 10pt;;
+    }
+
+    .container__button {
+        width: 100%; /* Кнопка занимает всю ширину */
+        margin-top: 10px; /* Отступ сверху */
+    }
 }
