--- a/styles/blocks/modal.css
+++ b/styles/blocks/modal.css
@@ -71,3 +71,15 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+
+@media only screen and (max-width: 768px) {
+  /*.modal {
+      display: flex; /* Показываем модальное окно при активном состоянии
+  }*/
+
+  .modal__content {
+      width: auto;
+      height: 30%;
+  }
+}
