--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -1,27 +1,27 @@
 .footer {
     display: grid;
-    grid-template-columns: 1.5fr 1.2fr 1.2fr 1.2fr 1.7fr; 
-    grid-template-rows: repeat(2, auto); 
-    grid-gap: 70px 3%; 
+    grid-template-columns: 1.5fr 1.2fr 1.2fr 1.2fr 1.7fr;
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 70px 3%;
     width: 80%;
     max-width: 100vw;
-    margin: 15% auto 130px auto
+    margin: 15% auto 130px auto;
 }
 
-.copyright:nth-child(1) { grid-row: 1 / span 2; } /* Ячейка 1 */
-.links:nth-child(2) { grid-row: 1; } /* Ячейка 2 */
-.links:nth-child(3) { grid-row: 2; } /* Ячейка 3 */
-.links:nth-child(4) { grid-row: 1; } /* Ячейка 4 */
-.links:nth-child(5) { grid-row: 2; } /* Ячейка 5 */
-.links:nth-child(6) { grid-row: 1; } /* Ячейка 6 */
-.links:nth-child(7) { grid-row: 2; } /* Ячейка 7 */
-.socials:nth-child(8) { grid-row: 1 / span 2; } /* Ячейка 8 */
+.copyright:nth-child(1) { grid-row: 1 / span 2; }
+.links:nth-child(2) { grid-row: 1; }
+.links:nth-child(3) { grid-row: 2; }
+.links:nth-child(4) { grid-row: 1; }
+.links:nth-child(5) { grid-row: 2; }
+.links:nth-child(6) { grid-row: 1; }
+.links:nth-child(7) { grid-row: 2; }
+.socials:nth-child(8) { grid-row: 1 / span 2; }
 
 .copyright__logo {
     width: 115px;
 }
 
-.copyright__text{
+.copyright__text {
     font-size: 8pt;
     color: #606060;
 }
@@ -44,17 +44,17 @@
     font-size: 13pt;
 }
 
-.socials_imgs{
+.socials_imgs {
     margin: 25px 0 30px 0;
 }
 
-.socials__item{
+.socials__item {
     margin: 0 10px;
     width: 17px;
     cursor: pointer;
 }
 
-.socials__links{
+.socials__links {
     list-style-type: none;
     color: #606060;
     display: flex;
@@ -66,6 +66,70 @@
     width: auto;
     font-size: 8pt;
 }
+
 .socials__link:last-child {
-    margin-right: 0; /* Убираем правый отступ у последнего элемента */
+    margin-right: 0;
+}
+
+/* Планшеты (768px–1024px) */
+@media only screen and (max-width: 1024px) {
+    .footer {
+        grid-template-columns: 1fr 1fr; /* Две колонки */
+        grid-gap: 40px 2%;
+        width: 90%;
+        margin: 20% auto 80px auto;
+    }
+    .copyright:nth-child(1) { grid-row: 1; grid-column: 1 / span 2; } /* Логотип на всю ширину */
+    .links:nth-child(2) { grid-row: 2; grid-column: 1; }
+    .links:nth-child(3) { grid-row: 2; grid-column: 2; }
+    .links:nth-child(4) { grid-row: 3; grid-column: 1; }
+    .links:nth-child(5) { grid-row: 3; grid-column: 2; }
+    .links:nth-child(6) { grid-row: 4; grid-column: 1; }
+    .links:nth-child(7) { grid-row: 4; grid-column: 2; }
+    .socials:nth-child(8) { grid-row: 5; grid-column: 1 / span 2; }
+    .column__h {
+        font-size: 12pt;
+    }
+    .column__link {
+        font-size: 9pt;
+    }
+}
+
+/* Мобильные (<768px) */
+@media only screen and (max-width: 768px) {
+    .footer {
+        grid-template-columns: 1fr; /* Одна колонка */
+        grid-gap: 20px;
+        width: 95%;
+        margin: 8% auto 50px auto;
+        text-align: center;
+    }
+    .copyright:nth-child(1) { grid-row: 1; grid-column: 1; }
+    .links:nth-child(2) { grid-row: 2; grid-column: 1; }
+    .links:nth-child(3) { grid-row: 3; grid-column: 1; }
+    .links:nth-child(4) { grid-row: 4; grid-column: 1; }
+    .links:nth-child(5) { grid-row: 5; grid-column: 1; }
+    .links:nth-child(6) { grid-row: 6; grid-column: 1; }
+    .links:nth-child(7) { grid-row: 7; grid-column: 1; }
+    .socials:nth-child(8) { grid-row: 8; grid-column: 1; margin: 0 auto;}
+    .copyright__logo {
+        width: 100px;
+    }
+    .copyright__text {
+        font-size: 7pt;
+    }
+    .column__h {
+        font-size: 11pt;
+    }
+    .column__link {
+        font-size: 8pt;
+        margin: 10px 0;
+    }
+    .socials__item {
+        width: 15px;
+    }
+    .socials__link {
+        font-size: 7pt;
+        margin-right: 20px;
+    }
 }
