--- a/styles/blocks/container.css
+++ b/styles/blocks/container.css
@@ -4,7 +4,7 @@
 
 .container__caption {
     font-size: 14pt;
-    color: rgba(96, 96, 96, 0.5);
+    color: rgba(28, 139, 192, 0.7);
 }
 
 .container__slogan {
@@ -16,11 +16,11 @@
     line-height: 171%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16pt;
-    color: #958A8A;
+    color: #1c8bc0;
 }
 
 .slogan_colored {
-    color: #0033FF;
+    color: #26658c;
 }
 
 .container__button {
@@ -30,7 +30,7 @@
     border: none;
     text-decoration: none;
     color: white;
-    background-color: #0056ff;
+    background-color: #26658c;
     margin: 34px 0 50px 0;
 }
 
