--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 42px 5.5%;
-    background: #F4F6F9;
+    background: rgba(198, 219, 234, 0.5);
     overflow: hidden;
 }
 
@@ -15,7 +15,6 @@ header {
     font-size: 24px;
     font-weight: bold;
     color: black;
-    background: #F4F6F9;
     z-index: 0;
     max-width: 113px;
 }
@@ -34,7 +33,7 @@ header {
 
 .header-list__item {
     margin: 0 16.5px;
-    color: #333;
+    color: rgba(38, 101, 140, 0.8);;
     font-size: 10pt;
     font-weight: 500;
     list-style-type:none;
@@ -42,7 +41,7 @@ header {
 }
 
 .header-list__item:hover {
-    color: #555;
+    color: #26658c;;
 }
 
 .header__buttons {
@@ -69,7 +68,7 @@ header {
 }
 
 .header__button-sign:hover {
-    background-color: #0056ff;
+    background-color: #26658c;
     transition: 0.2s;
     cursor: pointer;
 }
@@ -84,7 +83,7 @@ header {
         font-size: 9pt; /* Увеличиваем размер шрифта для лучшего восприятия */
     }
     .header__button-log, .header__button-sign {
-        background-color: #0056ff;
+        background-color: #26658c;
         font-size: 9pt;
     }
   }
