--- a/styles/blocks/preloader.css
+++ b/styles/blocks/preloader.css
@@ -13,7 +13,7 @@
 
 .loader {
     border: 8px solid #f3f3f3; 
-    border-top: 8px solid #0056ff;
+    border-top: 8px solid #26658c;
     border-radius: 50%;
     width: 60px;
     height: 60px;
