--- a/styles/blocks/section-advantages.css
+++ b/styles/blocks/section-advantages.css
@@ -1,5 +1,5 @@
 .section-advantages {
-    background-color: #000;
+    background-color: rgba(106, 144, 180, 1);
     margin: 0;
     max-width: 100vw;
     width: 100%;
@@ -42,7 +42,7 @@
 
 .advantage__text {
     font-size: 12pt;
-    color: #958A8A;
+    color: #000;
     line-height: 171%;
 }
 
