--- a/styles/blocks/section-plugins.css
+++ b/styles/blocks/section-plugins.css
@@ -3,10 +3,11 @@
     justify-content: center;
     flex-direction: row;
     padding: 300px 0 109px 0;
-    background: linear-gradient(to bottom, rgba(244, 246, 249, 1) 57%, rgba(244, 246, 249, 0) 100%);
+    background: linear-gradient(to bottom, rgba(198, 219, 234, 0.5) 57%, rgba(244, 246, 249, 0) 100%);
     width: 100%;
     max-width: 100vw;
     border-radius: 150% 150% 0% 0% / 15% 15% 0% 0%;
+    align-items: center;
 }
 
 .section-plugins__img {
