--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -23,7 +23,7 @@
 
 .copyright__text {
     font-size: 8pt;
-    color: #606060;
+    color: rgb(38, 101, 140);;
 }
 
 .links__column {
@@ -33,7 +33,7 @@
 }
 
 .column__link {
-    color: #606060;
+    color: rgb(38, 101, 140);    
     font-size: 10pt;
     margin: 15px 0;
 }
@@ -56,7 +56,7 @@
 
 .socials__links {
     list-style-type: none;
-    color: #606060;
+    color: rgb(38, 101, 140);
     display: flex;
     padding: 0;
 }
