--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -32,8 +32,9 @@ header {
 }
 
 .header-list__item {
+    font-family: 'Fontimerr Light', Helvetica, sans-serif;
     margin: 0 16.5px;
-    color: rgba(38, 101, 140, 0.8);;
+    color: rgb(38, 101, 140);
     font-size: 10pt;
     font-weight: 500;
     list-style-type:none;
@@ -52,6 +53,7 @@ header {
 }
 
 .header__button-log, .header__button-sign {
+    font-family: 'Fontimerr Bold', Helvetica, sans-serif;
     padding: 10px 20px;
     font-size: 10pt;
     border-radius: 25px;
