--- a/styles/blocks/section-plugins.css
+++ b/styles/blocks/section-plugins.css
@@ -8,15 +8,16 @@
     max-width: 100vw;
     border-radius: 150% 150% 0% 0% / 15% 15% 0% 0%;
     align-items: center;
+    margin: 0 auto;
 }
 
 .section-plugins__img {
-    margin-right: 16%;
-    width: 35%;
+    margin-right: 8%;
+    width: 45%;
     object-fit: contain;
 }
 
-.section-plugins > .container {
+.section-plugins>.container {
     width: 28%;
 }
 
@@ -25,11 +26,13 @@
     .section-plugins {
         padding: 200px 0 80px 0;
     }
+
     .section-plugins__img {
         width: 40%;
         margin-right: 10%;
     }
-    .section-plugins > .container {
+
+    .section-plugins>.container {
         width: 35%;
     }
 }
@@ -41,11 +44,13 @@
         padding: 100px 0 50px 0;
         border-radius: 0;
     }
+
     .section-plugins__img {
         width: 80%;
         margin: 0 auto;
     }
-    .section-plugins > .container {
+
+    .section-plugins>.container {
         width: 90%;
     }
 }
