--- a/styles/blocks/section-studio.css
+++ b/styles/blocks/section-studio.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 7.8% 230px 9.6%;
+    margin: 0 auto 230px auto;
 }
 
 .info-studio__img {
