--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -19,14 +19,14 @@ header {
     max-width: 113px;
 }
 
-.header__nav{
+.header__nav {
     display: flex;
     z-index: 1;
     align-items: center;
 }
 
 .header-list {
-    display :flex;
+    display: flex;
     margin: 0 0 0 79px;
     padding: 0;
 }
@@ -34,15 +34,20 @@ header {
 .header-list__item {
     font-family: 'Fontimerr Light', Helvetica, sans-serif;
     margin: 0 16.5px;
-    color: rgb(38, 101, 140);
     font-size: 10pt;
     font-weight: 500;
-    list-style-type:none;
+    list-style-type: none;
     cursor: pointer;
 }
 
 .header-list__item:hover {
-    color: #26658c;;
+    color: #26658c;
+}
+
+.header-list__item-link {
+    text-decoration: none;
+    scroll-margin-top: 80px;
+    color: rgb(38, 101, 140);
 }
 
 .header__buttons {
@@ -52,7 +57,8 @@ header {
     z-index: 2;
 }
 
-.header__button-log, .header__button-sign {
+.header__button-log,
+.header__button-sign {
     font-family: 'Fontimerr Bold', Helvetica, sans-serif;
     padding: 10px 20px;
     font-size: 10pt;
@@ -77,58 +83,79 @@ header {
 
 @media only screen and (max-width: 960px) {
     header {
-        padding: 20px 5%; /* Уменьшаем отступы */
+        padding: 20px 5%;
+        /* Уменьшаем отступы */
     }
 
     .header-list__item {
-        margin: 5px 1em; /* Отступ между пунктами меню */
-        font-size: 9pt; /* Увеличиваем размер шрифта для лучшего восприятия */
+        margin: 5px 1em;
+        /* Отступ между пунктами меню */
+        font-size: 9pt;
+        /* Увеличиваем размер шрифта для лучшего восприятия */
     }
-    .header__button-log, .header__button-sign {
+
+    .header__button-log,
+    .header__button-sign {
         background-color: #26658c;
         font-size: 9pt;
     }
-  }
+}
 
 /* Стили для мобильных устройств (ширина экрана до 768px) */
 @media only screen and (max-width: 768px) {
     header {
-        flex-direction: column; /* Вертикальное выравнивание элементов */
-        padding: 20px 5%; /* Уменьшаем отступы */
+        flex-direction: column;
+        /* Вертикальное выравнивание элементов */
+        padding: 20px 5%;
+        /* Уменьшаем отступы */
     }
 
     .left {
-        flex-direction: column; /* Вертикальное выравнивание логотипа и навигации */
-        align-items: center; /* Центрируем элементы */
-        margin-bottom: 15px; /* Отступ снизу */
+        flex-direction: column;
+        /* Вертикальное выравнивание логотипа и навигации */
+        align-items: center;
+        /* Центрируем элементы */
+        margin-bottom: 15px;
+        /* Отступ снизу */
     }
 
     .header__nav {
-        margin-top: 10px; /* Отступ сверху для навигации */
+        margin-top: 10px;
+        /* Отступ сверху для навигации */
     }
 
     .header-list {
-        flex-direction: column; /* Вертикальное выравнивание пунктов меню */
-        margin: 0; /* Убираем отступы */
+        flex-direction: column;
+        /* Вертикальное выравнивание пунктов меню */
+        margin: 0;
+        /* Убираем отступы */
         text-align: center;
     }
 
     .header-list__item {
-        margin: 5px 0; /* Отступ между пунктами меню */
-        font-size: 12pt; /* Увеличиваем размер шрифта для лучшего восприятия */
+        margin: 5px 0;
+        /* Отступ между пунктами меню */
+        font-size: 12pt;
+        /* Увеличиваем размер шрифта для лучшего восприятия */
     }
 
     .header__buttons {
-        flex-direction: column; /* Вертикальное выравнивание кнопок */
-        align-items: center; /* Центрируем кнопки */
-        margin-top: 5px; /* Отступ сверху для кнопок */
+        flex-direction: column;
+        /* Вертикальное выравнивание кнопок */
+        align-items: center;
+        /* Центрируем кнопки */
+        margin-top: 5px;
+        /* Отступ сверху для кнопок */
     }
 
-    .header__button-log, .header__button-sign {
-        width: 100%; /* Ширина кнопок на 100% */
-        padding: 12px; /* Увеличиваем отступы для кнопок */
-        font-size: 10pt; /* Увеличиваем размер шрифта */
+    .header__button-log,
+    .header__button-sign {
+        width: 100%;
+        /* Ширина кнопок на 100% */
+        padding: 12px;
+        /* Увеличиваем отступы для кнопок */
+        font-size: 10pt;
+        /* Увеличиваем размер шрифта */
         text-align: center;
     }
 }
-
