--- a/styles/blocks/modal.css
+++ b/styles/blocks/modal.css
@@ -15,10 +15,12 @@
   display: none; /* По умолчанию скрыта */
 }
 .wrapper__form {
+  font-family: 'Fontimerr Regular', Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
 }
 .wrapper__heading {
+  font-family: 'Fontimerr Bold', Helvetica, sans-serif;
   font-size: 2rem;
   margin-bottom: 20px;
   color: #000;
@@ -108,8 +110,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  /*background: url('../../img/s8-whale-wallpaper_6018.jpg') center center / cover no-repeat;
-  z-index: 999;*/
+  /*background: url('../../img/s8-whale-wallpaper_6018.jpg') center center / cover no-repeat;*/
+  z-index: 10;
   display: none;
 }
 
