--- a/styles/blocks/tours-modal.css
+++ b/styles/blocks/tours-modal.css
@@ -27,22 +27,13 @@
 .tours__modal-close {
     position: absolute;
     top: 10px;
-    right: 10px;
-    background: rgb(28, 139, 192);
-    color: white;
+    right: 15px;
+    font-size: 24px;
+    background: transparent;
     border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-size: 16px;
+    color: #000;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.tours__modal-close:hover {
-    background: #cc0000;
+    z-index: 1001;
 }
 
 .tours__cards {
@@ -84,7 +75,7 @@
     color: #555;
 }
 
-.tours__modal-title{
+.tours__modal-title {
     font-family: 'Fontimerr Regular', Helvetica, sans-serif;
 }
 
